tests/ui/consts/const-fn-error.stderr
error[E0658]: `for` is not allowed in a `const fn`
  --> $DIR/const-fn-error.rs:5:5
   |
LL | /     for i in 0..x {
LL | |
LL | |
LL | |
LL | |         sum += i;
LL | |     }
   | |_____^
   |
   = note: see issue #87575 <https://github.com/rust-lang/rust/issues/87575> for more information
   = help: add `#![feature(const_for)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0015]: cannot convert `std::ops::Range<usize>` into an iterator in constant functions
  --> $DIR/const-fn-error.rs:5:14
   |
LL |     for i in 0..x {
   |              ^^^^
   |
note: impl defined here, but it is not `const`
  --> $SRC_DIR/core/src/iter/traits/collect.rs:LL:COL
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const fn `<std::ops::Range<usize> as Iterator>::next` in constant functions
  --> $DIR/const-fn-error.rs:5:14
   |
LL |     for i in 0..x {
   |              ^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0015, E0658.
For more information about an error, try `rustc --explain E0015`.
